[gd_scene load_steps=4 format=3 uid="uid://ckwgnvwet52st"]

[ext_resource type="PackedScene" uid="uid://b45r81lj73pdb" path="res://systems/tutorial/tutorial_popups/tutorial_popup.tscn" id="1_3njrx"]
[ext_resource type="Script" path="res://systems/tutorial/tutorial_popups/tutorial_popup_end.gd" id="2_1yejo"]
[ext_resource type="Theme" uid="uid://c2as6vbqpnrve" path="res://assets/ui/themes/tutorial_and_tooltips_theme.tres" id="3_jfmhb"]

[node name="TutorialPopupEnd" instance=ExtResource("1_3njrx")]
script = ExtResource("2_1yejo")

[node name="EndButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme = ExtResource("3_jfmhb")
text = "End"

[connection signal="button_up" from="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/EndButton" to="." method="_on_end_button_button_up"]
